- Fixed as_of_date on position view (Issue 76) - Right align of position headings (Issue 77) - Fixed delete prompt on position delete (Issue 71) - Added a delete all on transaction view (Issue 70)

--- a/frano/static/css/main.css
+++ b/frano/static/css/main.css
@@ -213,7 +213,7 @@ TD.left { text-align: left !important; }
 
 .lastRow TD { border-bottom: none; }
 
-.positionTable THEAD TD { text-align: center; }
+.positionTable THEAD TD { text-align: right; padding-right: 5px;}
 .positionTable TBODY TD { text-align: right; padding: 10px 5px 10px 5px; }
 .tickerSymbol {font-size:18px;font-weight:bold;color:#333;}
 
